# MoleculeBench

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/MoleculeBench/: __init__.py  dataset.py  dataset_info.json  splitter.py
src/MoleculeBench/dataset/processed/: bace.csv  bbbp.csv  clintox.csv  hiv.csv  sider.csv  tox21.csv
src/MoleculeBench/dataset/raw/: download.sh
