[metadata]
name = MoleculeBench
version = 1.0.0
description = Benchmarking MoleculeNet datasets with unified pre-processing and data splits.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
include_package_data = True

packages = find:
package_dir =
    = src

[options.packages.find]
where = src
